Fix grid gap

--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -2,7 +2,7 @@
 
 .gallery {
   display: grid;
-  gap: 1rem;
+  gap: $default-space;
   margin: 0 auto;
 
   @media screen and (min-width: 1025px) {
